@@ -4,6 +4,7 @@ import java.math.BigInteger;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**		**	Independent Task Only	**
@@ -16,11 +17,11 @@ public class EngineeringDigestParallelStreamDemo {
 
 	public static void main(String[] args) {
 
-		List<Integer> nums = Stream.iterate(1, n->n+1).limit(2000).toList();
+		List<Integer> nums = Stream.iterate(1, n->n+1).limit(2000).collect(Collectors.toList());
 		
 		long startTime = System.currentTimeMillis();
 		
-		nums.stream().map(n->factorial(n)).toList();
+		nums.stream().map(n->factorial(n)).collect(Collectors.toList());
 		
 		long endTime = System.currentTimeMillis();
 		
@@ -28,7 +29,7 @@ public class EngineeringDigestParallelStreamDemo {
 		
 		startTime = System.currentTimeMillis();
 		
-		nums.parallelStream().map(n->factorial(n)).toList();
+		nums.parallelStream().map(n->factorial(n)).collect(Collectors.toList());
 		
 		endTime = System.currentTimeMillis();
 		
@@ -40,7 +41,7 @@ public class EngineeringDigestParallelStreamDemo {
 		
 		AtomicInteger sum = new AtomicInteger();	//Final or Effectively Final ke case me
 		
-		List<Integer> finalVal = num.stream().parallel().map(sum::addAndGet).toList();
+		List<Integer> finalVal = num.stream().parallel().map(sum::addAndGet).collect(Collectors.toList());
 		
 		// Diff order since parallel stream and not independent task
 		System.out.println("Sum: "+finalVal);
@@ -48,7 +49,7 @@ public class EngineeringDigestParallelStreamDemo {
 		
 //	Convert Parallel stream to Sequential stream
 		
-		nums.parallelStream().map(n->factorial(n)).sequential().toList();
+		nums.parallelStream().map(n->factorial(n)).sequential().collect(Collectors.toList());
 		
 		nums = Arrays.asList(5, 7, 8, 2, 9, 7, 4, 6);
 		
